<resources>
    <string name="app_name">Crypto Assets</string>
    <string name="txtTotalBalance">Balance</string>
    <string name="txtToday">Today</string>
    <string name="labelTituloAdicionarAtivo">Buy Asset</string>
    <string name="contentDescriptionValor">Amount</string>
    <string name="labelValor">Amount</string>
    <string name="contentDescriptionQuantidade">Quantity</string>
    <string name="labelQuantidade">Quantity</string>
    <string name="labelCotacao">Price: </string>
    <string name="labelValorTotal">Total Amount</string>
    <string name="contentDescriptionAtivo">Asset</string>
    <string name="labelAtivo">Asset</string>
    <string name="txtBuyAsset">Buy Asset</string>
    <string name="txtSellAsset">Sell Asset</string>
    <string name="bottomMenuHome">Balance</string>
    <string name="bottomMenuTransactions">Transactions</string>
    <string name="bottomMenuAssets">Assets</string>

    <string name="contentDescriptionBuyAsset">Buy Asset</string>
    <string name="contentDescriptionSellAsset">Sell Asset</string>
    <string name="labelTotalAtivos">Total Assets</string>
    <string name="labelTickerAtivo">Ticker</string>
    <string name="labelNomeAtivo">Name</string>
    <string name="contentDescriptionNomeAtivo">Asset Name</string>
    <string name="contentDescriptionTickerAtivo">Asset Ticker</string>


    <string name="contentDescriptionAddAsset">Add Asset</string>
    <string name="contentDescriptionTituloAdicionarAtivo">Add Asset</string>

    <string name="txtBotaoSalvarAtivo">Save</string>
    <string name="contentDescriptionBotaoSalvarAtivo">Save Asset</string>
    <string name="txtBotaoCriarAtivo">Create</string>
    <string name="contentDescriptionCriarAtivo">Create Asset</string>
    <string name="msgAtivoSalvoComSucesso">Asset saved successfully</string>
    <string name="labelMessageErrorMandatory">Field {0} is required</string>
    <string name="msgErroSalvarAtivoJaCadastrado">An Asset with this ticker already exists</string>

    <string name="msgTransacaoCompraSucesso">Asset {0} bought successfully </string>
    <string name="msgTransacaoVendaSucesso">Asset {0} sold successfully </string>
    <string name="labelDataTransacao">Transaction Date</string>
    <string name="labelTipoTransacao">Transaction Type</string>

    <string name="cantConnectToHost">Coudn\'t connect to server</string>
    <string name="noInternetPermissionWarning">You need to change app permission to allow internet connection</string>
    <string name="labelDownloadingData">Loading data</string>
    <string name="labelDownloadingDataComplete">Data loading complete</string>
    <string name="labelDownloadData">Download data</string>
    <string name="txtTotalTransactionsBalance">Balance</string>
    <string name="txtTotalInvestido">Total invested</string>
    <string name="txtVariacaoPatrimonio">Variation: </string>
    <string name="quantidadeAtivosAbreviado">Qnt </string>
    <string name="labelPrecoMedio">Average Price</string>
    <string name="labelOrders">Ordens</string>
    <string name="labelAvailableAssets">Available Assets</string>
    <string name="labelFieldGreatherThanZero">You must inform a value greater than 0 in field {0}</string>
    <string name="tituloMensagemConfirmacaoExclusaoAtivo">Delete Asset {0}?</string>
    <string name="mensagemConfirmacaoExclusaoAtivo">Removing the asset {0} you will erase all transactions related.</string>
    <string name="mensagemExclusaoSucesso">Asset {0} removed successfully.</string>
    <string name="mensagemExclusaoErro">Error removing Asset {0}.</string>
    <string name="labelDelete">Delete</string>
    <string name="labelDecline">Decline</string>
    <string name="tituloMensagemConfirmacaoExclusaoTransacao">Delete transaction of Asset {0}?</string>
    <string name="mensagemConfirmacaoExclusaoTransacao">Are you sure you want remove the transaction {0} of Asset {1}?</string>
    <string name="mensagemExclusaoTransacaoSucesso">Transaction of type {1} of Asset {1} removed successfully.</string>
    <string name="mensagemExclusaoTransacaoErro">Error removing transaction of Asset {0}.</string>
</resources>
