<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AdicaoAtivoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        >

        <TextView
            android:id="@+id/textViewTituloForm"
            style="@style/styleTituloSecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelTituloAdicionarAtivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSpinnerAtivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/contentDescriptionAtivo"
            android:text="@string/labelTickerAtivo"
            android:labelFor="@id/spinnerAtivo"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/textViewTituloForm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTituloForm"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloForm">

            <AutoCompleteTextView
                android:id="@+id/spinnerAtivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionNomeAtivo"
            android:text="@string/labelNomeAtivo"
            android:labelFor="@id/editNome"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutSpinnerAtivo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutSpinnerAtivo"
            app:layout_constraintTop_toBottomOf="@+id/layoutSpinnerAtivo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdicionar"
            style="@style/styleContainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txtBotaoSalvarAtivo"
            android:contentDescription="@string/contentDescriptionBotaoSalvarAtivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEditNome" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>