<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AdicaoTransacaoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        >

        <TextView
            android:id="@+id/textViewTituloForm"
            style="@style/styleTituloSecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSpinnerAtivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/contentDescriptionAtivo"
            android:text="@string/labelAtivo"
            android:labelFor="@id/editPrecoMedio"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/textViewTituloForm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTituloForm"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloForm">

            <AutoCompleteTextView
                android:id="@+id/spinnerAtivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditPrecoMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionValor"
            android:text="@string/labelValor"
            android:labelFor="@id/editPrecoMedio"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutSpinnerAtivo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutSpinnerAtivo"
            app:layout_constraintTop_toBottomOf="@+id/layoutSpinnerAtivo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPrecoMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionQuantidade"
            android:text="@string/labelQuantidade"
            android:labelFor="@id/editQuantidade"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditPrecoMedio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditPrecoMedio"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditPrecoMedio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editQuantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/labelCotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelCotacao"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditQuantidade"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditQuantidade"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditQuantidade" />

        <TextView
            android:id="@+id/txtValorCotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="35"
            app:layout_constraintEnd_toEndOf="@+id/labelCotacao"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/labelCotacao"
            app:layout_constraintTop_toBottomOf="@+id/labelCotacao" />

        <TextView
            android:id="@+id/labelValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelValorTotal"
            app:layout_constraintEnd_toEndOf="@+id/txtValorCotacao"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtValorCotacao"
            app:layout_constraintTop_toBottomOf="@+id/txtValorCotacao" />

        <TextView
            android:id="@+id/txtValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="67"
            app:layout_constraintEnd_toEndOf="@+id/labelValorTotal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/labelValorTotal"
            app:layout_constraintTop_toBottomOf="@+id/labelValorTotal" />


        <Button
            android:id="@+id/btnAdicionar"
            style="@style/styleContainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtValorTotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>