<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/progress_bar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        >

        <ScrollView
            android:id="@+id/scrollTotalCrypto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"> </FrameLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/containerMenu"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sellFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:contentDescription="@string/contentDescriptionAddAsset"
                android:src="@drawable/ic_remove_shopping_cart_black_24dp"
                android:text="@string/txtSellAsset"
                app:elevation="6dp"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buyFab"
                app:pressedTranslationZ="12dp"
                app:rippleColor="@color/colorSecondary" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buyFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:contentDescription="@string/contentDescriptionAddAsset"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                android:text="@string/txtBuyAsset"
                app:elevation="6dp"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:pressedTranslationZ="12dp"
                app:rippleColor="@color/colorSecondary" />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <LinearLayout
            android:id="@+id/containerMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="bottom|end">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_navigation_menu" />

        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.coordinatorlayout.widget.CoordinatorLayout>