<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerTotalItemMoeda"
    style="@style/containerTotalItemMoeda">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTotalItemMoeda"
            style="@style/cardTotalItemMoeda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txtNomeAtivo"
                    style="@style/txtItemValue"
                    android:layout_marginStart="8dp"
                    android:focusable="true"
                    android:importantForAccessibility="yes"
                    android:text="Nome Ativo"
                    app:layout_constraintStart_toEndOf="@+id/iconeAtivo"
                    app:layout_constraintTop_toTopOf="@+id/iconeAtivo" />

                <TextView
                    android:id="@+id/txtCotacaoMoeda"
                    style="@style/txtItemValue"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Cotacao Moeda"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iconeAtivo" />


                <TextView
                    android:id="@+id/txtLabelQuantidadeMoeda"
                    style="@style/txtItemLabel"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/quantidadeAtivosAbreviado"
                    app:layout_constraintEnd_toEndOf="@+id/txtCotacaoMoeda"
                    app:layout_constraintTop_toBottomOf="@+id/txtCotacaoMoeda" />

                <TextView
                    android:id="@+id/txtQuantidadeMoeda"
                    style="@style/txtItemValue"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Qtd Moeda"
                    app:layout_constraintEnd_toEndOf="@+id/txtLabelQuantidadeMoeda"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelQuantidadeMoeda" />

                <TextView
                    android:id="@+id/txtPrecoMedioPago"
                    style="@style/txtItemValue"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Valor Preco Medio"
                    app:layout_constraintStart_toStartOf="@+id/txtLabelPrecoMedio"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelPrecoMedio" />

                <TextView
                    android:id="@+id/txtLabelValorTotalInvestido"
                    style="@style/txtItemLabel"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:text="@string/txtTotalInvestido"
                    app:layout_constraintStart_toStartOf="@+id/txtPrecoMedioPago"
                    app:layout_constraintTop_toBottomOf="@+id/txtPrecoMedioPago" />

                <TextView
                    android:id="@+id/txtValorTotalPago"
                    style="@style/txtItemValue"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Valor Investido"
                    app:layout_constraintStart_toStartOf="@+id/txtLabelValorTotalInvestido"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelValorTotalInvestido" />


                <TextView
                    android:id="@+id/txtLabelPrecoMedio"
                    style="@style/txtItemLabel"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/labelPrecoMedio"
                    app:layout_constraintStart_toStartOf="@+id/iconeAtivo"
                    app:layout_constraintTop_toBottomOf="@+id/iconeAtivo" />

                <TextView
                    android:id="@+id/txtLabelVariacaoPorcentagem"
                    style="@style/txtItemLabel"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/txtVariacaoPatrimonio"
                    app:layout_constraintEnd_toEndOf="@+id/txtQuantidadeMoeda"
                    app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeMoeda" />

                <TextView
                    android:id="@+id/txtVariacaoTotalPrecoMedioMoeda"
                    style="@style/txtItemValue"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Variacao Moeda"
                    app:layout_constraintEnd_toEndOf="@+id/txtLabelVariacaoPorcentagem"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelVariacaoPorcentagem" />

                <ImageView
                    android:id="@+id/iconeAtivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_btc" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

</LinearLayout>