<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerTotalItemHeaderMoeda"
    style="@style/containerTotalItemHeaderMoeda"
    >
        <com.google.android.material.card.MaterialCardView
            style="@style/cardTotalItemHeaderMoeda"
            android:id="@+id/cardTotalItemHeaderMoeda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/txtLabelTotalBalance"
                    style="@style/txtLabelTotalBalance"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/txtTotalBalance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTotalBalance"
                    style="@style/txtValorLabelTotalBalance"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Valor Total Patrimonio"
                    app:layout_constraintStart_toStartOf="@+id/txtLabelTotalBalance"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelTotalBalance" />


                <TextView
                    android:id="@+id/txtLabelTotalInvestido"
                    style="@style/txtLabelTotalInvestido"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/txtTotalInvestido"
                    app:layout_constraintStart_toStartOf="@+id/txtTotalBalance"
                    app:layout_constraintTop_toBottomOf="@+id/txtTotalBalance" />

                <TextView
                    android:id="@+id/txtTotalInvestido"
                    style="@style/txtValorTotalInvestido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Valor Investido"
                    app:layout_constraintStart_toEndOf="@+id/txtLabelTotalInvestido"
                    app:layout_constraintTop_toTopOf="@+id/txtLabelTotalInvestido" />

                <TextView
                    android:id="@+id/txtLabelVariacaoPrecoMedio"
                    style="@style/txtLabelVariacaoPatrimonio"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="@string/txtVariacaoPatrimonio"
                    app:layout_constraintStart_toStartOf="@+id/txtLabelTotalInvestido"
                    app:layout_constraintTop_toBottomOf="@+id/txtLabelTotalInvestido" />

                <TextView
                    android:id="@+id/txtVariacaoPorcentagem"
                    style="@style/txtLabelVariacaoPrecoMedioNeutra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Var Porcentagem"
                    app:layout_constraintStart_toEndOf="@+id/txtVariacaoPatrimonio"
                    app:layout_constraintTop_toTopOf="@+id/txtLabelVariacaoPrecoMedio" />

                <TextView
                    android:id="@+id/txtVariacaoPatrimonio"
                    style="@style/txtLabelVariacaoPrecoMedioNeutra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:text="Var Preco Medio"
                    app:layout_constraintStart_toEndOf="@+id/txtLabelVariacaoPrecoMedio"
                    app:layout_constraintTop_toTopOf="@+id/txtLabelVariacaoPrecoMedio" />





            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

</LinearLayout>